<resources>
    <string name="app_name">Employee Management System</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="page_title">Employee Profile</string>
    <string name="add_new_page_title">Add New Employee</string>
    <string name="update_employee_title">Update Employee</string>
    <string name="profile_image">Profile Image</string>
    <string name="initials_label">Initials</string>
...
    <string name="end_date_label">End Date</string>
    <string name="end_date">DD/MM/YYYY</string>
    <string name="latest_salary_label">Latest Salary</string>
    <string name="latest_salary">e.g 50.5</string>
    <string name="salary_format">%1$.2f AUD/hour</string>
    <string name="salary_unit">AUD/hour</string>
    <string name="add_employee">Add New</string>
    <string name="main_title">Employee List</string>
    <string name="note_required_fields">Note:\n\nAll fields are required, except "End Date".</string>
</resources>
